--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/e24aea72ef.js" crossorigin="anonymous"></script>
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -11,23 +12,35 @@
     <h1 class="title">Projeto final</h1>
     <p class="intro">
       Nesse trabalho, decidi fazer diferentes tipos de pginas, para mostrar o
-      que foi aprendido durante esse semestre. Logo abaixo, você tem 6 cards
+      que foi aprendido durante esse semestre. Logo abaixo, você tem 5 cards
       para escolher qual projeto deseja ver. Todos foram feitos por mim e estão
-      disponiveis no meu GithUb.
+      disponiveis no meu GitHub, que está linkado com o icone abaixo, junto com mais algumas redes socais.
     </p>
+    <ul class="list">
+      <li class=" list-icon">
+        <a href="https://github.com/AlexandrePateis" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </li>
+      <li class=" list-icon">
+        <a href="https://www.instagram.com/alexandrepateis/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      </li>
+      <li class=" list-icon">
+        <a href="https://www.linkedin.com/in/alexandre-pateis/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      </li>
+      <li class=" list-icon">
+        <a href="https://www.facebook.com/AlexandrePateis0/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+      </li>
+    </ul>
     <p class="esc">Escolha abaixo qual projeto deseja abrir</p>
     <div class="cards">
-      <a href="https://alexandrepateis.github.io/IMC/" target="_blank">Projeto 1</a>
+      <a href="https://alexandrepateis.github.io/IMC/" target="_blank" class="cards_1">Projeto 1</a>
 
-      <a href="https://alexandrepateis.github.io/ConvertMoedas/" target="_blank">Projeto 2</a>
+      <a href="https://alexandrepateis.github.io/ConvertMoedas/" target="_blank" class="cards_1">Projeto 2</a>
 
-      <a href="https://alexandrepateis.github.io/estilo-f/" target="_blank">Projeto 3</a>
+      <a href="https://alexandrepateis.github.io/estilo-f/" target="_blank" class="cards_1">Projeto 3</a>
 
-      <a href="https://alexandrepateis.github.io/todo/" target="_blank">Projeto 4</a>
+      <a href="https://alexandrepateis.github.io/todo/" target="_blank" class="cards_1">Projeto 4</a>
 
-      <a href="https://alexandrepateis.github.io/calculater/" target="_blank">Projeto 5</a>
-
-      <a href="">Porjeto 1</a>
+      <a href="https://alexandrepateis.github.io/calculater/" target="_blank" class="cards_1">Projeto 5</a>
     </div>
   </body>
 </html>
